# hfs-video-caption

./: README.md  app.py  app_qwen25vl.py  pyproject.toml  requirements.txt
.github/workflows/: deploy_to_hf_space.yaml
