[project]
name = "hfs-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=5.38.0",
    "transformers==4.49.0",
    "pydantic==2.10.6",
    "loguru>=0.7.3",
    "qwen-vl-utils>=0.0.11",
    "torchvision==0.19.0",
    "ffmpeg-python>=0.2.0",
    "accelerate==0.32.1",
    "bitsandbytes==0.41.1",
    "scipy==1.11.3",
]
